--- a/carta2.html
+++ b/carta2.html
@@ -35,34 +35,36 @@
 <!--Home1-->
         <section class="home">
             <div class="home-img">
-                <img src="images\carta5a2.jpg" class="one" width="400" style="border-radius: 15px;">
+                <img src="images/carta6a4.jpg" class="one" width="400" style="border-radius: 15px;">
             </div>
 
             <div class="home-text">
-                <h1>Fiestita de Orlando</h1>
-                <h3>25/06</h3>
-                <h5>Hoy te vi, te veias hermosa, cuando te pusiste mi camiseta quede casi casi en shock, no podia creer lo hermosa que te veias, te queria comer a besitos todo el dia y estar abrazado a ti por siempre.
-                    Perdon por no bañarme contigo AUNQUE yo te avise 1 y 1000 veces que no me iba a bañar porque no tenia ropa, aun despues de tu berrinchito y que casi me quedo sin pierna, me gusto estar contigo (aun a 60 grados sentados en el sol), con el simplo hecho de verte me alegraste el dia, ojala poder verte asi de seguido; si de verdad tu mamá me da permiso de verte 3 días a la semana, 3 días a la semana estare ahí.</h5> 
-                <a href="https://wa.me/526442573859" class="btn">Te amo!</a>
+                <h1>Tu casita</h1>
+                <h3>29/06/23</h3>
+                <h5>Hoy fui a verte, no sabes lo feliz que fui por un momento, el simple hecho de sentirme aceptado por tu mamá me pone feliz, me siento seguro contigo y te tengo muuucha confianza, me encanta tu pelo, perdon por agarrarlo tanto pero no sabes lo que me fascina jugar con el, todo el dia me latia mucho el corazon, desde antes sabia que tu eras la indicada, hoy mi corazon me lo confirmo.
+                    Lo siento si te sentiste presionada en algunos momentos pero cuando te abrazo o te doy besitos me pone muy feliz.
+                    Gracias por estar conmigo, antes sabia que me amabas pero no sabia cuanto, ahora se lo tanto que me amas, gracias por hacerme sentir asi.
+                    Gracias por todos los momentos que he pasado contigo y lo que me haz hecho pasar, contigo todo es rosita</h5> 
+                <a href="#" class="btn">Te amo!</a>
 
             </div>
         </section>
 <!--Fotos chiquitas-->
         <div class="main">
             <div class="row">
-                <li><img src="images\carta5a2.jpg" width="400" style="border-radius: 15px;" onclick="slider('images/carta5a2.jpg')"></li>
+                <li><img src="images/carta6a4.jpg" width="400" style="border-radius: 15px;" onclick="slider('images/carta6a4.jpg')"></li>
             </div>
 
             <div class="row row2">
-                <li><img src="images\carta5a1.jpg" width="400" style="border-radius: 15px;" onclick="slider('images/carta5a1.jpg')"></li>
+                <li><img src="images\carta6a1.jpg" width="400" style="border-radius: 15px;" onclick="slider('images/carta6a1.jpg')"></li>
             </div>
 
             <div class="row row3">
-                <li><img src="images\carta5a3.jpg" onclick="slider('images/carta5a3.jpg')"></li>
+                <li><img src="images\carta6a3.jpg" onclick="slider('images/carta6a3.jpg')"></li>
             </div>
         </div>
 
-        <a href="carta2.html" class="bottom">Siguiente<i class='bx bx-down-arrow-circle'></i></a>
+        <a href="###" class="bottom">Siguiente<i class='bx bx-down-arrow-circle'></i></a>
 
         <script type="text/javascript">
             function slider(anything){ 
