--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </h2>
         </section>
         
-
+<p>Equipo:</br>Andre Sebastian Vizcarra Salas</br>Damian Solis Tirado</br>Alexia Ayguiano Calderon</br>Azul Paola Rodriguez Ruiz</br>Denzel Omar Verdugo Bocardo</p>
        </div>
     </body>
 </html>
